install eslint and prettier

--- a/package.json
+++ b/package.json
@@ -19,5 +19,11 @@
   "homepage": "https://github.com/setov/hexlet-js#readme",
   "dependencies": {
     "lodash": "^4.17.20"
+  },
+  "devDependencies": {
+    "eslint": "^7.14.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.22.1",
+    "prettier": "^2.2.0"
   }
 }
